--- a/register.html
+++ b/register.html
@@ -50,7 +50,7 @@
                             </div>
                             <div class="form-group ">
                                 <div class="pos-r">
-                                    <input id="email" type="text" name="email" placeholder="Email"
+                                    <input id="email" type="email" name="email" placeholder="Email"
                                         class="form-email form-control">
                                     <i class="fa fa-envelope"></i>
                                     <div class="error" id="emailErr"></div>
@@ -59,7 +59,7 @@
                             </div>
                             <div class="form-group ">
                                 <div class="pos-r">
-                                    <input id="phone" type="text" name="phone" placeholder="Phone Number"
+                                    <input id="phone" type="number" name="phone" placeholder="Phone Number"
                                         class="form-phone form-control">
                                         <i class="fa fa-phone"></i>
                                         <div class="error" id="phoneErr"></div>
