--- a/register.html
+++ b/register.html
@@ -38,7 +38,7 @@
                                 facebook</a>
                         </p>
                         </div>
-                        <form role="form" class="login-form">
+                        <form role="form" class="login-form" onsubmit="return validateForm()">
                             <div class="form-group ">
                                 <div class="pos-r">
                                     <input id="username" type="text" name="username" placeholder="Username"
@@ -95,7 +95,7 @@
                                 <a href="login.html" id="login"> Already Have an Account</a>
                             </div>
                             <div class="form-group">
-                                <button class="btn btn-warning form-control" onclick="return validateForm()"><strong>Sign Up</strong> 
+                                <button class="btn btn-warning form-control" type="submit"><strong>Sign Up</strong> 
                                         </button>
                             </div>
 
