--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-      <div class="container-fluid">
+      <nav class="container-fluid">
         <div class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
             <div class="navbar-brand">EzzBuy</div>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -31,7 +31,7 @@
                 </ul>
             </div>
         </div>
-      </div>
+      </nav>
         <!-- Jumbotron -->
         <div class="jumbotron p-0">
         
