--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         </nav>
         <div class="jumbotron bg-white">
           <div class="row">
-            <div class="col-4">
+            <div class="col-md-4 col-sm-4" style="border: solid pink;">
               Category and sub Category
             </div>
-            <div class="col-8" style="border:solid purple;">
+            <div class="col-md-8 col-sm-8" style="border:solid purple;">
               Content view
             </div>
           </div>
