--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <title>Hello, world!</title>
   </head>
-  <body>
-        <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+  <body style="margin-top: 84px;">
+        <nav class="navbar navbar-expand-sm navbar-blue bg-dark fixed-top">
             <a href="#" class="navbar-brand">EzzBuy</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#list">
@@ -30,17 +30,19 @@
                 </ul>
             </div>
         </nav>
-        <div class="jumbotron bg-white">
+      
+        <div class="jumbotron">
           <div class="row">
-            <div class="col-md-4 col-sm-4" style="border: solid pink;">
+            <div class="col-md-2 col-sm-4" style="border: solid pink;">
               Category and sub Category
             </div>
-            <div class="col-md-8 col-sm-8" style="border:solid purple;">
+            <div class="col-md-10 col-sm-8" style="border:solid purple;">
               Content view
             </div>
           </div>
 
         </div>
+
   </body>
    
     <!-- Optional JavaScript -->
