--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Hello, world!</title>
   </head>
   <body style="margin-top: 84px;">
-        <nav class="navbar navbar-expand-sm navbar-blue bg-dark fixed-top">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
             <a href="#" class="navbar-brand">EzzBuy</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#list">
@@ -31,7 +31,7 @@
             </div>
         </nav>
       
-        <div class="jumbotron">
+        <div class="jumbotron bg-white">
           <div class="row">
             <div class="col-md-2 col-sm-4" style="border: solid pink;">
               Category and sub Category
