--- a/register.html
+++ b/register.html
@@ -38,7 +38,7 @@
                                 facebook</a>
                         </p>
                         </div>
-                        <form role="form" class="login-form" onsubmit="return validateForm()">
+                        <form role="form" name="regForm" class="login-form" onsubmit="return validateForm()">
                             <div class="form-group ">
                                 <div class="pos-r">
                                     <input id="username" type="text" name="username" placeholder="Username"
