--- a/login.html
+++ b/login.html
@@ -1,83 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login form</title>
-
-    <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
-    <!-- Favicon and touch icons -->
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
-    <script src="forus.js"></script>
-
+    <link rel="stylesheet" href="css/materialize.min.css">
+    <title>Login to EzzBuy</title>
 </head>
-
 <body>
-    <div class="container ">
+    <div class="container" style="margin-top: 300px; border: solid pink; padding: 50px; width:500px">
         <div class="row">
-            <div class="login-container col-lg-4 col-md-6 col-sm-8 col-xs-12">
-                <div class="login-content">
-                    <div class="login-title">
-                        <center>
-                        <h3><a href="index.html" class="nav-link"> EzzBuy</a></h3>
-                        </center>
-                    </div>
-                    <div class="login-body">
-                        <form role="form" class="login-form">
-                            <p>
-                                <a href="https://www.google.com" class="btn btn-block btn-google"> <i class="fab fa-google"></i>   Login via
-                                    Google</a>
-                                <a href="https://www.facebook.com" class="btn btn-block btn-facebook"> <i class="fab fa-facebook-f"></i>   Login via
-                                    facebook</a>
-                            </p>
-                            <div class="form-group ">
-                                <div class="pos-r">
-                                    <input id="userid" type="text" name="form-username" placeholder="Username or Email"
-                                        class="form-username form-control">
-                                    <i class="fa fa-user"></i>
-                                    <div class="error" id="userlog"></div>
-                                    <span></span>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="pos-r">
-                                    <input id="password" type="password" name="form-password"
-                                        placeholder="Password" class="form-password form-control">
-                                    <i class="fa fa-lock"></i>
-                                    <div class="error" id="passErr"></div>
-                                    <span></span>
-                                </div>
-                            </div>
-                            <div class="form-group text-right">
-                                <a href="forgotpassword.html" class="bold"> Forgot password?</a>
-                            </div>
-
-                            <div class="form-group">
-                                <button class="btn btn-warning form-control" onclick="loginValidation()">Log In</button>
-                            </div>
-
-                        </form>
-                        <div class="login-footer text-center template">
-                            <h5>Don't have an account?<a href="register.html"> Sign up </a> </h5>
-                        </div>
-                    </div> <!-- end  login-body -->
-                </div><!-- end  login-content -->
-                
-            </div> <!-- end  login-container -->
-
+            <form class="col s">
+                <div class="input-field col s12">
+                    <input type="text" name="log_det" id="log_det" class="validate">
+                    <label for="log_det">Username or Email</label>
+                </div>
+                <div class="input-field col s12">
+                    <input type="text" name="log_det" id="log_det" class="validate">
+                    <label for="password">Password</label>
+                </div>
+                <div class="center-align">
+                    <button class="btn-large waves-effect wave-light" type="submit" name="login">LOGIN
+                    </button>
+                </div>
+            </form>
         </div>
-    </div><!-- end container -->
+    </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+    <script src="jquery.js"></script>
+    <script src="js/materialize.min.js"></script>
 </body>
-
 </html>
