--- a/login.html
+++ b/login.html
@@ -12,13 +12,13 @@
 <body>
     <div class="container" style="margin-top: 300px; border: solid pink; padding: 50px; width:500px">
         <div class="row">
-            <form class="col s">
+            <form class="col s12">
                 <div class="input-field col s12">
                     <input type="text" name="log_det" id="log_det" class="validate">
                     <label for="log_det">Username or Email</label>
                 </div>
                 <div class="input-field col s12">
-                    <input type="text" name="log_det" id="log_det" class="validate">
+                    <input type="password" name="log_det" id="log_det" class="validate">
                     <label for="password">Password</label>
                 </div>
                 <div class="center-align">
