--- a/login.html
+++ b/login.html
@@ -10,8 +10,8 @@
     <title>Login to EzzBuy</title>
 </head>
 <body>
-    <div class="container" style="margin-top: 300px; border: solid pink; padding: 50px; width:500px">
-        <div class="row">
+    <div class="container">
+        <div class="row" style="margin: 20% 20%; padding: 20px; border:1px solid pink; width:auto">
             <form class="col s12">
                 <div class="input-field col s12">
                     <input type="text" name="log_det" id="log_det" class="validate">
