--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="row" style="margin: 20% 20%; padding: 20px; border:1px solid pink; width:auto">
+        <div class="row" style="margin: 20% 20%; padding: 50px 50px; border:1px solid pink; width:auto">
             <form class="col s12">
                 <div class="input-field col s12">
                     <input type="text" name="log_det" id="log_det" class="validate">
@@ -22,8 +22,13 @@
                     <label for="password">Password</label>
                 </div>
                 <div class="center-align">
-                    <button class="btn-large waves-effect wave-light" type="submit" name="login">LOGIN
+                    <button class=" waves-effect wave-light btn-large" type="submit" name="login">LOGIN
+                        <i class="material-icons right">send</i>
                     </button>
+                </div>
+                <div class="right-align">
+                    <p><a href="forgotpassword.html">Forgot Password?</a></p>
+                    <p><a href="register.html">Don't have an account?</a></p>
                 </div>
             </form>
         </div>
