--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body style="margin-top: 84px;">
         <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
-            <a href="#" class="navbar-brand">EzzBuy</a>
+            <a href="#" class="navbar-brand">EzzyBuy</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#list">
                 <span class="navbar-toggler-icon"></span>
