--- a/register.html
+++ b/register.html
@@ -52,8 +52,7 @@
                     </button>
                 </div>
                 <div class="right-align">
-                    <p><a href="forgotpassword.html">Forgot Password?</a></p>
-                    <p><a href="register.html">Don't have an account?</a></p>
+                    <p><a href="login.html">Already have an account?Login</a></p>
                 </div>
             </form>
         </div>
