--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <!-- Favicon and touch icons -->
     <link rel="shortcut icon" href="assets/ico/favicon.png">
-    <script src="forus.js"></script>
+        <script src="forus.js"></script>
 
 </head>
 
@@ -30,7 +30,7 @@
                         </center>
                     </div>
                     <div class="login-body">
-                        <form role="form" class="login-form">
+                        <form role="form" class="login-form" onsubmit="validateForm()">
                             <!-- <p>
                                 <a href="https://www.google.com" class="btn btn-block btn-google"> <i class="fab fa-google"></i>   Login via
                                     Google</a>
@@ -60,7 +60,7 @@
                             </div>
 
                             <div class="form-group">
-                                <button class="btn btn-warning form-control" onclick="loginValidation()">Log In</button>
+                                <button class="btn btn-warning form-control" type="submit">Log In</button>
                             </div>
 
                         </form>
