--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
                         </center>
                     </div>
                     <div class="login-body">
-                        <form role="form" class="login-form" onsubmit="validateForm()">
+                        <form role="form" class="login-form" onsubmit="return validateForm()">
                             <!-- <p>
                                 <a href="https://www.google.com" class="btn btn-block btn-google"> <i class="fab fa-google"></i>   Login via
                                     Google</a>
