--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <link rel="stylesheet" href="assets/css/custom.css">
 
     <title>Hello, world!</title>
@@ -36,11 +37,14 @@
             <div class="col-md-2 col-sm-4" style="border: solid pink;">
               Category and sub Category
             </div>
-            <div class="col-md-10 col-sm-8" style="border:solid purple;">
+            <div class="col-md-8 col-sm-6" style="border:solid purple;">
               Content view
             </div>
-          </div>
-
+            <div class="col-md-2 col-sm-2">
+              <a href="upload.html"><i class="fa fa-plus"></i></a>
+            </div>
+        </div>
+          
         </div>
 
   </body>
