--- a/upload.html
+++ b/upload.html
@@ -132,8 +132,9 @@
                             <textarea name="description" id="description" cols="5" rows="5" class="form-control">Enter product description</textarea>
                         </div>
                         <div class="form-group">
+                            <label for="photos">Product Photos</label>
                             <input type="file" class="form-control" id="customFile" multiple>
-                            <label class="custom-file-label" for="customFile">Choose file</label>
+                            
                         </div>
 
                         <label for="term">
