form validation added

--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -25,13 +25,13 @@
                         <h5>Enter Email to receive password reset link</h5>
                     </div>
                     <div class="login-body">
-                        <form role="form" class="login-form">
+                        <form role="form" class="was-validated">
                             <div class="form-group ">
                                 <div class="pos-r">
                                     <input id="email" type="email" name="email" id="email" placeholder="Email"
-                                        class="form-email form-control">
+                                        class="form-control" required>
                                     <i class="fa fa-envelope" aria-hidden="true"></i>
-                                    <span></span>
+                                    <div class="invalid-feedback">Fill field</div>
                                 </div>
                             </div>
                             <div class="form-group">
