--- a/register.html
+++ b/register.html
@@ -38,40 +38,40 @@
                                 facebook</a>
                         </p>
                         </div>
-                        <form role="form" name="regForm" class="login-form" onsubmit="return validateForm()">
+                        <form role="form" name="regForm" class="was-validated">
                             <div class="form-group ">
                                 <div class="pos-r">
                                     <input id="username" type="text" name="username" placeholder="Username"
-                                        class="form-name form-control">
+                                        class="form-control" required>
                                     <i class="fa fa-user"></i>
-                                    <div class="error" id="unameErr"></div>
+                                    <div class="invalid-feedback">Enter a username</div>
                                     <span></span>
                                 </div>
                             </div>
                             <div class="form-group ">
                                 <div class="pos-r">
                                     <input id="email" type="email" name="email" placeholder="Email"
-                                        class="form-email form-control">
+                                        class="form-control" required>
                                     <i class="fa fa-envelope"></i>
-                                    <div class="error" id="emailErr"></div>
+                                    <div class="invalid-feedback">Enter a valid email</div>
                                     <span></span>
                                 </div>
                             </div>
                             <div class="form-group ">
                                 <div class="pos-r">
                                     <input id="phone" type="number" name="phone" placeholder="Phone Number"
-                                        class="form-phone form-control">
+                                        class="form-control" required>
                                         <i class="fa fa-phone"></i>
-                                        <div class="error" id="phoneErr"></div>
+                                        <div class="invalid-feedback">Enter a phone number</div>
                                     <span></span>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="pos-r">
                                     <input id="password" type="password" name="password"
-                                        placeholder="Password" class="form-control">
+                                        placeholder="Password" class="form-control" required>
                                         <i class="fa fa-lock"></i>
-                                        <div class="error" id="passwErr"></div>
+                                        <div class="invalid-feedback">filll this field</div>
                                     <span></span>
                                 </div>
                             </div>
@@ -84,20 +84,18 @@
                                     <span></span>
                                 </div>
                             </div>
-
+                            <div class="form-group form-check">
                             <label for="term">
-                                <input type="checkbox" name="term" id="term"> Accept Terms and Condition
-                            </label>
+                                <input class="form-group-check" type="checkbox" name="term" id="term" required> Accept Terms and Condition
+                                <div class="invalid-feedback">Check box to continue</div>
+                            </div>
 
                             <p>By creating an account you agree to our <a href="#">Terms &
                                     Privacy</a>.</p>
                             <div class="form-group text-right">
                                 <a href="login.html" id="login"> Already Have an Account</a>
                             </div>
-                            <div class="form-group">
-                                <button class="btn btn-warning form-control" type="submit"><strong>Sign Up</strong> 
-                                        </button>
-                            </div>
+                            <button class="btn btn-warning btn-block" type="submit">Sign Up</button>
 
                         </form>
                     </div><!-- end  login-content -->
